<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">


        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_logo"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo_white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:gravity="center_horizontal"
            android:text="@string/create_account_in_todo_app"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/login_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">



            <EditText
                android:id="@+id/name_controller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="name"
                android:background="@drawable/input_fields"
                android:hint="@string/enter_your_full_name"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textColorHint="#D3CFCF" />

            <EditText
                android:id="@+id/email_controller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/input_fields"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColorHint="#D3CFCF" />

            <EditText
                android:id="@+id/password_controller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="password"
                android:background="@drawable/input_fields"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorHint="#D3CFCF" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Register"
                android:textAllCaps="false"
                android:textSize="18sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="50dp"
                android:background="@color/shadeBlack" />


            <Button
                android:id="@+id/go_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/already_have_an_account_login"
                android:background="@drawable/button_backgrouns"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="18sp" />


        </LinearLayout>

    </LinearLayout>


</ScrollView>